--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,26 +6,28 @@ networks:
 
 services:
   pgsql:
-    build: ./postgres
-    environment: 
+    build: ${DB_PATH}/postgres
+    environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
       PGDATA: /var/lib/postgresql/data
     ports:
       - '54321:5432'
-    volumes: 
-      - ./postgres/data:/var/lib/postgresql/data
+    volumes:
+      - ${DB_PATH}/postgres/data:/var/lib/postgresql/data
     restart: always
-    networks: 
+    networks:
       - backend
   redis:
-    build: ./redis
+    build: ${CACHE_PATH}/redis
     ports:
       - '63790:6379'
-    # volumes: 
-      # - ./redis/conf/redis.conf:/usr/local/etc/redis/redis.conf
+    volumes:
+      # - ${CACHE_PATH}/redis/conf/redis.conf:/usr/local/etc/redis/redis.conf
+      # Redis startup command tells redis data to persist its data in the /data directory in the container
+      - ${CACHE_PATH}/data:/data
     restart: always
     privileged: true
-    networks: 
+    networks:
       - backend
